# Tanks-1-vs-1

./: .gitignore  CMakeLists.txt  main.cpp
src/: CMakeLists.txt  main.cpp
src/game/: CMakeLists.txt  Game.cpp  Game.h
src/interfaces/: IRendered.h  IUpdatable.h
src/main_window/: MainWindow.cpp  MainWindow.h
